Tue Jul 13 00:50:48 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_rb.rb: Support call-seq: for Ruby files.

Mon Jul 12 21:20:51 2004  Dave Thomas  <dave@pragprog.com>

	* html_generator.rb: Support hyperlinks of the form {any text}[xxx]
	  as well as stuff[xxx]

Sat Jul 10 09:30:24 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/soap/marshal/test_struct.rb: use qualified build-tin class name
	  (::Struct) to avoid name crash.

Sat Jul 10 04:21:56 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: better operation for SIGINT when processing 
	  callbacks.
	* ext/tk/lib/tk/msgcat.rb: ditto.
	* ext/tk/lib/tk/variable.rb: ditto.
	* ext/tk/lib/tk/timer.rb: ditto.

	* ext/tk/lib/tk/validation.rb (__def_validcmd):  add a module 
	  function of Tk::ValidateConfigure to define validatecommand 
	  methods easier

Fri Jul  9 22:18:59 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* array.c, enum.c, pack.c: rdoc patch from Johan Holmberg
	  <holmberg@iar.se> [ruby-core:3132] [ruby-core:3136]

	* numeric.c: rdoc patch.

Fri Jul  9 19:26:39 2004  Tanaka Akira  <akr@m17n.org>

	* lib/open-uri.rb (URI::HTTPS#proxy_open): raise ArgumentError to
	  notice https is not supported.

Fri Jul  9 14:28:54 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_raise): accept third argument as well as
	  Kernel#raise, and evaluate the arguments to create an exception in
	  the caller's context.  [ruby-talk:105507]

Fri Jul  9 01:47:08 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib : bug fix
	* ext/tk/lib/tkextlib/itcl : add [incr Tcl] support
	* ext/tk/lib/tkextlib/itk  : add [incr Tk] support
	* ext/tk/lib/tkextlib/iwidgets : midway point of [incr Widgets] support
	* ext/tk/sample/tkextlib/iwidgets : very simple examples of
	  [incr Widgets]

Thu Jul  8 19:27:16 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rb_cv_stack_end_address): detect stack end address